--- a/src/public/css/stylesDetalle.css
+++ b/src/public/css/stylesDetalle.css
@@ -203,3 +203,10 @@ footer ul li img{
 		font-weight: bolder;
 	}
 }
+
+/*Estilos del registro*/
+.logo-centrado{
+    width: 20vw;
+    height: 20vh;
+    margin: 0px, 0px, 30px;
+}
