Agregando header principal al carrito

--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/css/normalize.css" rel="stylesheet">-->
+        <link href="/css/normalize.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,18 +17,72 @@
 
     
     <body>
-    <header>
-        <div class="nav-bar">
-            <img src="/images/Imagen1.png" class="logo-carrito">
-        </div>
-        <div class="enlaces">
-        <ul>
-            <li><a href="/login.html">Login |</a></li>
-            <li><a href="/registro.html">Register |</a></li>
-            <li><a href="/carrito.html">Cart</a></li>
-        </ul>
-        </div>
-    </header>
+        <header>
+            <div class="header-top">
+                <section class="logo-container">
+                    <img src="/images/logo.png" class="logo" alt="Logo">
+                </section>
+                <div class="alimentos">
+                    <ul>
+                      <li>
+                        <a href="#">Alimentos   <i class="fas fa-caret-up"></i></a>
+                        <ul>
+                          <li><a href="#">Link 1</a></li>
+                          <li><a href="#">Link 2</a></li>
+                          <li><a href="#">Link 3</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="accesorios">
+                    <ul>
+                      <li>
+                        <a href="#">Accesorios   <i class="fas fa-caret-up"></i></a>
+                        <ul>
+                          <li><a href="#">Link 1</a></li>
+                          <li><a href="#">Link 2</a></li>
+                          <li><a href="#">Link 3</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="viviendas">
+                    <ul>
+                      <li>
+                        <a href="#">Viviendas   <i class="fas fa-caret-up"></i></a>
+                        <ul>
+                          <li><a href="#">Link 1</a></li>
+                          <li><a href="#">Link 2</a></li>
+                          <li><a href="#">Link 3</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="otros">
+                    <ul>
+                      <li>
+                        <a href="#">Otros   <i class="fas fa-caret-up"></i></a>
+                        <ul>
+                          <li><a href="#">Link 1</a></li>
+                          <li><a href="#">Link 2</a></li>
+                          <li><a href="#">Link 3</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                        
+            </div>
+                
+    
+            <nav>
+                <ul>
+                    <li><a href="/">Home </a> </li>
+                    <li><a href="/carrito"> Carrito</a>  </li>
+                    <li><a href = "/login"> Login</a> </li>
+                    <li><a href="/registro"> Registro</a> </li>
+                </ul>
+            </nav>
+        </header>
 
     <h2>Carrito</h2>
     <main>
