--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,16 +16,19 @@
     <header>
         <div class="header-top">
             <section class="logo-container">
-                <img src="../images/logo.png" class="logo" alt="Logo">
+                <a href="/"><img src="../images/logo.png" class="logo" alt="Logo"></a>
             </section>
             <div class="alimentos">
                 <ul>
                   <li>
                     <a href="#">Alimentos   <i class="fas fa-caret-up"></i></a>
                     <ul>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 2</a></li>
-                      <li><a href="#">Link 3</a></li>
+                      <li><a href="#">Perros</a></li>
+                      <li><a href="#">Gatos</a></li>
+                      <li><a href="#">Aves</a></li>
+                      <li><a href="#">Reptiles</a></li>
+                      <li><a href="#">Roedores</a></li>
+                      <li><a href="#">Peces</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -35,9 +38,12 @@
                   <li>
                     <a href="#">Accesorios   <i class="fas fa-caret-up"></i></a>
                     <ul>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 2</a></li>
-                      <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Perros</a></li>
+                        <li><a href="#">Gatos</a></li>
+                        <li><a href="#">Aves</a></li>
+                        <li><a href="#">Reptiles</a></li>
+                        <li><a href="#">Roedores</a></li>
+                        <li><a href="#">Peces</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -47,9 +53,12 @@
                   <li>
                     <a href="#">Viviendas   <i class="fas fa-caret-up"></i></a>
                     <ul>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 2</a></li>
-                      <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Perros</a></li>
+                        <li><a href="#">Gatos</a></li>
+                        <li><a href="#">Aves</a></li>
+                        <li><a href="#">Reptiles</a></li>
+                        <li><a href="#">Roedores</a></li>
+                        <li><a href="#">Peces</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -59,9 +68,9 @@
                   <li>
                     <a href="#">Otros   <i class="fas fa-caret-up"></i></a>
                     <ul>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 2</a></li>
-                      <li><a href="#">Link 3</a></li>
+                      <li><a href="#">Suplementos</a></li>
+                      <li><a href="#">Salud</a></li>
+                      <li><a href="#">Juguetes</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -69,7 +78,6 @@
                     
         </div>
             
-
         <nav>
             <ul>
                 <li><a href="/">Home </a> </li>
@@ -82,13 +90,57 @@
 
     <main>
         <h1>En construccion UwU</h1>
-        <section></section>
-        <article></article>
-        <img src="../images/PortadaMascotas.png" alt="PortadaMascotas">
+        <section class="top-main">
+            <div class="mascotas-img">
+                <img src="../images/PortadaMascotas.png" alt="PortadaMascotas">
+            </div>
+            <div class="contenido-intro">
+                <div>
+                    <h2>Nosotros</h2>
+                </div>
+                <div>
+                    <h2>Articulos</h2>
+                </div>
+            </div>
+        </section>
+        <section class="info-gral">
+            <p>
+                About
+            </p>
+            <p>
+                More
+            </p>
+            <p>
+                Eeey
+            </p>
+            <p>
+                free
+            </p>
+        </section>
+         <h2>Lo mas destacado</h2>
+        <section class="articulos">
+           
+            <article>
+                <img src="../images/croquetas.jfif"alt="producto-1">
+                <p class="product-detail">Croquetas 1</p>
+            </article>
+            <article>
+                <img src="../images/croquetas2.jfif" alt="producto 2">
+                <p>Croquetas 2</p>
+            </article>
+            <article>
 
-        <img src="../images/croquetas.jfif"alt="producto-1">
+            </article>
+            <article>
 
-        <img src="../images/croquetas2.jfif" alt="producto 2">
+            </article>
+        </section>
+
+        <section class="new-products">
+
+        </section>
+
+
     </main>
 
     <footer>
