agregando Estilos carrito y del registro de Diana

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -376,3 +376,14 @@ main .info-gral p{
 
 }
 /*--------------------------------------------*/
+  /*Estilos del registro*/
+  .logo-centrado{
+    width: 20vw;
+    height: 20vh;
+    margin: 0px, 0px, 30px;
+}
+
+/*Estilos carrito*/
+ul{
+    list-style-type: none;
+}
