--- a/src/views/index.html
+++ b/src/views/index.html
@@ -147,27 +147,29 @@
         <section>
             <h3>Categorías</h3>
             <ul>
-                <li>Perros</li>
-                <li>Gatos</li>
-                <li>Aves</li>
-                <li>Reptiles</li>
-                <li>Roedores</li>
-                <li>Peces</li>
+                <li><a href="#"><i class="fas fa-dog"></i>&nbsp; Perros</a></li>
+                <li><a href="#"><i class="fas fa-cat"></i>&nbsp;Gatos</a></li>
+                <li><a href="#"><i class="fas fa-crow"></i>&nbsp;Aves</a></li>
+                <li><a href="#"><img src="../images/tortugaIcono.svg">&nbsp;Reptiles </a></li>
+                <li><a href="#"><img src="../images/ardillaIcono.svg">&nbsp;Roedores </a></li>
+                <li><a href="#"><i class="fas fa-fish"></i>&nbsp;Peces</a></li>
             </ul>
         </section>
         <section>
             <h3>Nosotros</h3>
             <ul>
-                <li>Contacto</li>
-                <li>Quienes somos?</li>
-                <li>Servicios</li>
-                <li>Nuestro blog</li>
+                <li><a href="#"><i class="fas fa-file-signature"></i> &nbsp;Contacto</li>
+                <li><a href="#"><ion-icon name="people-circle-outline"></ion-icon> &nbsp;¿Quiénes somos?</a></li>
+                <li><a href="#"><ion-icon name="medical-outline"></ion-icon> &nbsp;Servicios</a></li>
+                <li><a href="#"><i class="fas fa-rss-square"></i> &nbsp;Nuestro blog</a></li>
             </ul>
         </section>
         <section>
             <h3>Redes sociales</h3>
             <ul>
-                <li>...</li>
+                <li><a href="www.facebook.com"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
+                <li><a href="www.twitter.com"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
+                <li><a href="web.whatsapp.com"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
             </ul>
         </section>
         <section>
@@ -186,5 +188,7 @@
             </ul>
         </section>
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </body>
 </html>
