--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -15,10 +15,12 @@
         <title>Registro</title>
     </head>
     
-    <body>
-    <header class="header-registro">
-        <img src="/images/Imagen1.png" alt="Logo" class="logo-centrado">
-        <h2>Crear Cuenta</h2>
+    <body class="body-registro">
+    <header>
+        <div class="header-registro">
+            <img src="/images/Imagen1.png" alt="Logo" class="logo-centrado">
+        </div>
+        <h2 class="header-registro">Crear Cuenta</h2>
     </header>
     
     <main>
