--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -84,79 +84,80 @@
             </nav>
         </header>
 
-    <h2>Carrito</h2>
     <main>
+    <div class="carrito">
+      <h2>Carrito</h2>
+    </div>
         <section class="bolsa">
-            <article class="producto">
-                <img src="/images/producto_1.jpg" alt="Chamarra negra Bad2Bone" class="product_img">
-                <div class="descripcion-producto">
-                    <p class="descripcion">Bootique Chamarra Negra Bad2Bone</p>
-                    <label class="talla">Talla:</label>
-                    <select name="talla">
-                        <option value="xx-chico">xx-Chico</option>
-                        <option value="x-chico">x-chico</option>
-                        <option value="chico">Chico</option>
-                        <option value="mediano">Mediano</option>
-                        <option value="grande">Grande</option>
-                    </select>
-                </div>
-                <div class="precio-producto">
-                    <p class="precio">$499</p>
-                    <input type="submit" value="-">
-                    <input type="number" value="cantidad">
-                    <input type="submit" value="+">
-                </div>
+          <div class="articulos-bolsa">
+            <article>
+              <img src="/images/producto_1.jpg" alt="Chamarra negra Bad2Bone" class="img-producto">
+              <div class="descripcion-producto">
+                <p class="descripcion">Bootique Chamarra Negra Bad2Bone</p>
+                <label class="talla">Talla: </label>
+                <select name="talla">
+                  <option value="xx-chico">xx-Chico</option>
+                  <option value="x-chico">x-chico</option>
+                  <option value="chico">Chico</option>
+                  <option value="mediano">Mediano</option>
+                  <option value="grande">Grande</option>
+                </select>
+                <p class="precio">$499</p>
+                <input type="submit" value="-">
+                <input type="number" value="cantidad">
+                <input type="submit" value="+">
+              </div>
             </article>
 
             <article class="producto">
-                <img src="/images/producto_2.jpg" alt="Collar Good2Go Rosa Neon" class="product_img">
-                <div class="descripcion-producto">
-                    <p class="descripcion">Collar Acojinado Reflejante Rosa Neon Good2Go</p>
-                    <label class="talla">Talla:</label>
-                    <select name="talla">
-                        <option value="xx-chico">xx-Chico</option>
-                        <option value="x-chico">x-chico</option>
-                        <option value="chico">Chico</option>
-                        <option value="mediano">Mediano</option>
-                        <option value="grande">Grande</option>
-                    </select>
-                </div>
-                <div class="precio-producto">
-                    <p class="precio">$325</p>
-                    <input type="submit" value="-">
-                    <input type="number" value="cantidad">
-                    <input type="submit" value="+">
-                </div>
+              <img src="/images/producto_2.jpg" alt="Collar Good2Go Rosa Neon" class="img-producto">
+              <div class="descripcion-producto">
+                <p class="descripcion">Collar Acojinado Reflejante Rosa Neon Good2Go</p>
+                <label class="talla">Talla: </label>
+                <select name="talla">
+                  <option value="xx-chico">xx-Chico</option>
+                  <option value="x-chico">x-chico</option>
+                  <option value="chico">Chico</option>
+                  <option value="mediano">Mediano</option>
+                  <option value="grande">Grande</option>
+                </select>
+                  <p class="precio">$325</p>
+                  <input type="submit" value="-">
+                  <input type="number" value="cantidad">
+                  <input type="submit" value="+">
+              </div>
             </article>
 
             <article class="producto">
-                <img src="/images/producto_3.jpg" alt="Correa Good2Go Rosa Neon" class="product_img">
-                <div class="descripcion-producto">
-                    <p class="descripcion">Correa Acojinada Reflejante Rosa Neon Good2Go</p>
-                    <label class="talla">Talla:</label>
-                    <select name="talla">
-                        <option value="xx-chico">xx-Chico</option>
-                        <option value="x-chico">x-chico</option>
-                        <option value="chico">Chico</option>
-                        <option value="mediano">Mediano</option>
-                        <option value="grande">Grande</option>
-                    </select>
-                </div>
-                <div class="precio-producto">
-                    <p class="precio">$439</p>
-                    <input type="submit" value="-">
-                    <input type="number" value="cantidad">
-                    <input type="submit" value="+">
-                </div>
+              <img src="/images/producto_3.jpg" alt="Correa Good2Go Rosa Neon" class="img-producto">
+              <div class="descripcion-producto">
+                <p class="descripcion">Correa Acojinada Reflejante Rosa Neon Good2Go</p>
+                <label class="talla">Talla: </label>
+                <select name="talla">
+                  <option value="xx-chico">xx-Chico</option>
+                  <option value="x-chico">x-chico</option>
+                  <option value="chico">Chico</option>
+                  <option value="mediano">Mediano</option>
+                  <option value="grande">Grande</option>
+                  </select>
+                <p class="precio">$439</p>
+                <input type="submit" value="-">
+                <input type="number" value="cantidad">
+                <input type="submit" value="+">
+              </div>
             </article>
+          </div>
         </section>
 
-        <section class="resumen">
+        <section class="seccion-resumen">
+          <h3>Resumen de la compra</h3>
+          <div class="resumen">
             <p class="direccion-envio">Calle Numero CP Ciudad</p>
             <p class="costo-envio">Gratis</p>
             <p class="total-envio">Total con envío</p>
             <p class="total">$1263</p>
             <input type="submit" value="Comprar">
+          </div>
         </section>
     </main>
 
