--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -18,7 +18,7 @@
     <body class="body-registro">
     <header>
         <div class="header-registro">
-            <img src="/images/Imagen1.png" alt="Logo" class="logo-centrado">
+            <img src="/images/logo.png" alt="Logo" class="logo-centrado">
         </div>
         <h2 class="header-registro">Crear Cuenta</h2>
     </header>
