--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -414,7 +414,13 @@ main .carrito h2{
 }
 
 main section.bolsa article{
-    background-color: rgb(197, 197, 197);    
+    background-color: rgb(236, 236, 236);    
     margin: 3% 5%;
 	border-radius: 20px;
+}
+
+main section div.articulos-bolsa article{
+	display: flex;
+	justify-content: flex-start;
+	
 }
