--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -411,16 +411,105 @@ main .carrito h2{
 .img-producto{
 	width: 200px;
     height: 200px;
+	box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.75);
+	border-radius: 20px;
 }
 
 main section.bolsa article{
-    background-color: rgb(236, 236, 236);    
+    background-color: rgb(245, 245, 245); 
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgb(178, 178, 178); 
     margin: 3% 5%;
 	border-radius: 20px;
 }
 
 main section div.articulos-bolsa article{
 	display: flex;
-	justify-content: flex-start;
-	
+	justify-content: space-between;
+	padding: 3%;
 }
+
+main section div.descripcion-producto{
+	width: 50%;
+}
+
+.cantidad{
+	display: flex;
+}
+
+button, input, optgroup, select, textarea {
+    font-family: 'Roboto', sans-serif;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 10px 2px;
+}
+
+main section div.cantidad input{
+	width: 25px;
+	height: 25px;
+}
+
+.descripcion{
+	font-weight: bold;
+	font-size: large;
+}
+
+.precio{
+	display: flex;
+	font-size: 25px;
+	font-weight: bold;
+	justify-content: flex-end;
+	margin-bottom: 0px;
+}
+
+main section div.resumen{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: flex-end;
+	margin-right: 5%;
+	margin-bottom: 5%;
+}
+
+main section div.resumen h3,
+main section p.total{
+	font-size: xx-large;
+	font-weight: bold;
+	margin-block-start: 0em;
+	margin-inline-end: 0em;
+}
+
+main section p.direccion-envio{
+	font-size: large;
+	color: rgb(2, 0, 119);
+	margin-block-start: 0em;
+	margin-inline-end: 0em;
+}
+
+main section p.costo-envio{
+	font-size: large;
+	color: rgb(230, 0, 0);
+	margin-block-start: 0em;
+	margin-inline-end: 0em;
+}
+
+main section p.total-envio{
+	font-size: large;
+	font-weight: bold;
+	margin-block-start: 0em;
+	margin-inline-end: 0em;
+}
+
+main section div.resumen input{
+	width: 8rem;
+	height: 3rem;
+	border-radius: 7px;
+	background-color: #2239b8;
+	color: white;
+}
+
+
+
+
+
