--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -94,7 +94,7 @@
               <img src="/images/producto_1.jpg" alt="Chamarra negra Bad2Bone" class="img-producto">
               <div class="descripcion-producto">
                 <p class="descripcion">Bootique Chamarra Negra Bad2Bone</p>
-                <label class="talla">Talla: </label>
+                <label class="talla">Talla:</label>
                 <select name="talla">
                   <option value="xx-chico">xx-Chico</option>
                   <option value="x-chico">x-chico</option>
@@ -102,10 +102,12 @@
                   <option value="mediano">Mediano</option>
                   <option value="grande">Grande</option>
                 </select>
+                <div class="cantidad">
+                  <input type="submit" value="-">
+                  <input type="number" value="cantidad">
+                  <input type="submit" value="+">
+                </div>
                 <p class="precio">$499</p>
-                <input type="submit" value="-">
-                <input type="number" value="cantidad">
-                <input type="submit" value="+">
               </div>
             </article>
 
@@ -113,7 +115,7 @@
               <img src="/images/producto_2.jpg" alt="Collar Good2Go Rosa Neon" class="img-producto">
               <div class="descripcion-producto">
                 <p class="descripcion">Collar Acojinado Reflejante Rosa Neon Good2Go</p>
-                <label class="talla">Talla: </label>
+                <label class="talla">Talla:</label>
                 <select name="talla">
                   <option value="xx-chico">xx-Chico</option>
                   <option value="x-chico">x-chico</option>
@@ -121,10 +123,12 @@
                   <option value="mediano">Mediano</option>
                   <option value="grande">Grande</option>
                 </select>
-                  <p class="precio">$325</p>
+                <div class="cantidad">
                   <input type="submit" value="-">
                   <input type="number" value="cantidad">
                   <input type="submit" value="+">
+                </div>
+                  <p class="precio">$325</p>
               </div>
             </article>
 
@@ -132,7 +136,7 @@
               <img src="/images/producto_3.jpg" alt="Correa Good2Go Rosa Neon" class="img-producto">
               <div class="descripcion-producto">
                 <p class="descripcion">Correa Acojinada Reflejante Rosa Neon Good2Go</p>
-                <label class="talla">Talla: </label>
+                <label class="talla">Talla:</label>
                 <select name="talla">
                   <option value="xx-chico">xx-Chico</option>
                   <option value="x-chico">x-chico</option>
@@ -140,18 +144,20 @@
                   <option value="mediano">Mediano</option>
                   <option value="grande">Grande</option>
                   </select>
+                <div class="cantidad">
+                  <input type="submit" value="-">
+                  <input type="number" value="cantidad">
+                  <input type="submit" value="+">
+                </div>
                 <p class="precio">$439</p>
-                <input type="submit" value="-">
-                <input type="number" value="cantidad">
-                <input type="submit" value="+">
               </div>
             </article>
           </div>
         </section>
 
         <section class="seccion-resumen">
-          <h3>Resumen de la compra</h3>
           <div class="resumen">
+            <h3>Resumen de la compra</h3>
             <p class="direccion-envio">Calle Numero CP Ciudad</p>
             <p class="costo-envio">Gratis</p>
             <p class="total-envio">Total con envío</p>
