--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -240,9 +240,9 @@
         
     </main>
 
-    <footer class="fondoAzulOscuro">
-        <section>  
-            <h1 class="titulosHeader">Categorías</h1>
+    <footer>
+        <section>
+            <h3>Categorías</h3>
             <ul>
                 <li><a href="#"><i class="fas fa-dog"></i>&nbsp; Perros</a></li>
                 <li><a href="#"><i class="fas fa-cat"></i>&nbsp;Gatos</a></li>
@@ -252,9 +252,8 @@
                 <li><a href="#"><i class="fas fa-fish"></i>&nbsp;Peces</a></li>
             </ul>
         </section>
-        
         <section>
-            <h1 class="titulosHeader">Nosotros</h1>
+            <h3>Nosotros</h3>
             <ul>
                 <li><a href="#"><i class="fas fa-file-signature"></i> &nbsp;Contacto</li>
                 <li><a href="#"><ion-icon name="people-circle-outline"></ion-icon> &nbsp;¿Quiénes somos?</a></li>
@@ -262,15 +261,29 @@
                 <li><a href="#"><i class="fas fa-rss-square"></i> &nbsp;Nuestro blog</a></li>
             </ul>
         </section>
-        
         <section>
-            <h1 class="titulosHeader">Redes sociales</h1>
+            <h3>Redes sociales</h3>
             <ul>
                 <li><a href="www.facebook.com"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
                 <li><a href="www.twitter.com"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
                 <li><a href="web.whatsapp.com"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
             </ul>
-        </section>        
+        </section>
+        <section>
+            <form method="GET">
+                <label for="registro-footer" class="registro footer">
+                    <h3>Registrate</h3>
+                    <input type="text" placeholder="correo-elecro@yeah.com">
+                </label>
+            </form>
+        </section>
+        <section>
+            <h3>Servicio al cliente</h3>
+            <ul>
+                <li>Seguimiento de pedidos</li>
+                <li>Quejas y sugerencias</li>
+            </ul>
+        </section>
     </footer>
     </body>
 
